// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUI Structure/> Actions: renders the simplest actions with no extra settings passed 1`] = `
<div
  className="xui-actions xui-actions-layout"
  primary={
    <XUIButton
      isDisabled={false}
      isExternalLink={false}
      isGrouped={false}
      isLink={false}
      isLoading={false}
      retainLayout={true}
      tabIndex={0}
      type="button"
      variant="standard"
    >
      Primary
    </XUIButton>
  }
  secondary={
    <XUIButton
      isDisabled={false}
      isExternalLink={false}
      isGrouped={false}
      isLink={false}
      isLoading={false}
      retainLayout={true}
      tabIndex={0}
      type="button"
      variant="standard"
    >
      Secondary
    </XUIButton>
  }
>
  Testing 💩
</div>
`;

exports[`<XUI Structure/> Overview block and section: renders the base overview block with no extra settings passed 1`] = `
<div
  className="xui-overview xui-overview-layout"
/>
`;

exports[`<XUI Structure/> Overview block and section: renders the base overview block with sections and sentiments 1`] = `
<div
  className="xui-overview xui-overview-layout"
>
  <section
    className="xui-overview--section"
  >
    <div
      className="xui-overview--label"
    >
      standard
    </div>
    <div
      className="xui-overview--value"
    >
      100.23
    </div>
  </section>
  <section
    className="xui-overview--section"
  >
    <div
      className="xui-overview--label"
    >
      positive
    </div>
    <div
      className="xui-overview--value xui-textcolor-positive"
    >
      100.23
    </div>
  </section>
  <section
    className="xui-overview--section"
  >
    <div
      className="xui-overview--label"
    >
      negative
    </div>
    <div
      className="xui-overview--value xui-textcolor-negative"
    >
      100.23
    </div>
  </section>
  <section
    className="xui-overview--section"
  >
    <div
      className="xui-overview--label"
    >
      muted
    </div>
    <div
      className="xui-overview--value xui-textcolor-muted"
    >
      100.23
    </div>
  </section>
</div>
`;

exports[`<XUI Structure/> Pageheader and Breadcrumb: renders the simplest pageheader with no extra settings passed 1`] = `
<header
  className="xui-pageheading"
>
  <div
    className="xui-pageheading--content xui-pageheading--content-layout"
  >
    <h1
      className="xui-pageheading--title"
    >
      Testing 💩
    </h1>
  </div>
</header>
`;

exports[`<XUI Structure/> Rows and columns: renders the base column with no extra settings passed 1`] = `
<div
  className="xui-column-12-of-12"
>
  Testing 💩
</div>
`;

exports[`<XUI Structure/> Rows and columns: renders the base row with no extra settings passed 1`] = `
<div
  className="xui-row"
>
  Testing 💩
</div>
`;

exports[`<XUI Structure/> Rows and columns: renders the column with wide and medium column widths, if provided 1`] = `
<div
  className="xui-column-12-of-12 xui-column-3-of-12-medium xui-column-6-of-12-wide"
>
  Testing 💩
</div>
`;
